--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="James Lee" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/Profile Pic.png" alt="Roger Dugas" />
             <div class="profile-content pull-left">
                 <h1 class="name">James Lee</h1>
                 <h2 class="desc">Web App Developer</h2>   
