--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/Profile Pic.png" alt="Roger Dugas" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/PictureRD.png" alt="Roger Dugas" />
             <div class="profile-content pull-left">
                 <h1 class="name">Roger Dugas</h1>
                 <h2 class="desc">Analytics Professional</h2>   
@@ -68,7 +68,7 @@
     
                <section class="latest section">
                     <div class="section-inner">
-                        <h2 class="heading">Latest Projects</h2>
+                        <h2 class="heading">Data Projects</h2>
                         <div class="content">    
                                                
                             <div class="item featured text-center">
