--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/PictureRD.png" alt="Roger Dugas" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/Screen Shot 2019-01-28 at 1.51.34 PM.png" alt="Roger Dugas" />
             <div class="profile-content pull-left">
                 <h1 class="name">Roger Dugas</h1>
                 <h2 class="desc">Analytics Professional</h2>   
@@ -269,12 +269,16 @@
                         <h2 class="heading">Education</h2>
                         <div class="content">
                             <div class="item">                      
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> MSc Psychology and Computer Science</h3>
-                                <h4 class="university">University College London <span class="year">(2011-2012)</span></h4>
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> MSc Analytics</h3>
+                                <h4 class="university">North Carolina State University <span class="year">(2018-2019)</span></h4>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc Computer Science</h3>
-                                <h4 class="university">University of Bristol <span class="year">(2008-2011)</span></h4>
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> MSc Management</h3>
+                                <h4 class="university">Elon Univeristy <span class="year">(2015-2016)</span></h4>
+                            </div><!--//item-->
+                            <div class="item">
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc Applied Mathematics</h3>
+                                <h4 class="university">Elon University <span class="year">(2009-2013)</span></h4>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
