--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img class="profile-image img-responsive pull-left" src="assets/images/Screen Shot 2019-01-28 at 1.51.34 PM.png" alt="Roger Dugas" />
             <div class="profile-content pull-left">
                 <h1 class="name">Roger Dugas</h1>
-                <h2 class="desc">Analytics Professional</h2>   
+                <h2 class="desc">Analytics |</h2>   
                 <ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
